content updates post reviews with Carbon designers

--- a/src/pages/guidelines/typography/experiences.mdx
+++ b/src/pages/guidelines/typography/experiences.mdx
@@ -94,14 +94,14 @@ alternative experience better supports the user purpose.
 
 If your users are working in a product but pausing to read or scan for options,
 an expressive moment can facilitate easy reading and/or create a desired impact
-or pause. In these cases, however the "moment" would span a full page where
-there are no containers.
+or pause. In these cases, however the "moment" would span a full page or banner
+where there are no containers.
 
 If your users are on the website and reading, but then switch to a focused task
 within the web experience, using productive styles within that component would
 facilitate focus.
 
-### Using productive moments within [IBM.com](http://ibm.com) pages
+### Using productive moments within IBM.com pages
 
 Here are some of the places the Dotcom team use productive moments:
 
@@ -111,13 +111,67 @@ Here are some of the places the Dotcom team use productive moments:
 - Product configuration
 - Search/filter on catalogs
 
+Images
+
+\*\* add mega menu image
+
+<Caption>
+  The more compact productive type styles make it easier to scan the IBM website
+  mega menu.
+</Caption>
+
+\*\* add productive tab image
+
+<Caption>
+  The productive tab component keeps content contained and easy to scan.
+</Caption>
+
+<Caption>
+  Creating a chatbot is easy when you have a starting place with pre-built
+  content.
+</Caption>
+
+\*\* add product configuration image
+
+<Caption>
+  A productive moment on an input form during product configuration facilitates
+  focus.
+</Caption>
+
+\*\* add checkout image
+
+<Caption>
+  A productive moment on an input form during checkout facilitates focus.
+</Caption>
+
+\*\* add filter panel image
+
+<Caption>
+  A productive moment in the filter panel keeps information contained and easy
+  to scan.
+</Caption>
+
 ### Using expressive moments within product designs
 
-Here are some of the places the product teams are using expressive moments:
+The productive experience is all about keeping the user focused and able to
+complete complex tasks, therefore the areas where expressive moments can be used
+are less common. However, when the user is first entering the product, or moving
+to another area of the product you may find opportunities.
 
-- Product home pages, also known as "world overview pages"
-- Onboarding
-- Log in pages
+For expressive moments, you are looking for areas where the page opens up and
+the content is not restricted to a container, card, or data table. Home pages
+and page headers or banners are two possibilites.
+
+\*\* add image
+
+<Caption>
+  A home page when the user is first entering the product or an area of the
+  product.
+</Caption>
+
+For more details about home pages, IBMers can reference the
+[World overview page pattern](https://pages.github.ibm.com/ibmcloud/pal/patterns/world-overview-pages/usage/)
+in the IBM Cloud library.
 
 ## Guidelines
 
