--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -59,9 +59,8 @@ There are two heading type sets and the major difference between them is in how
 they are implemented in code.
 
 - Expressive headings are responsive and the type styles change size at
-  different breakpoints. The larger values have a taller line height and the
-  smaller values a more condensed light height. Breakpoints are set in the code
-  so that the type adjusts smoothly.
+  different breakpoints. These values are carefully designed to maintain
+  hierarchical relationship when used among other expressive headings.
 
 - Productive uses fixed headings. In the product space, users are generally
   embedded within one area that has multiple containers and denser content, and
