--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -62,11 +62,21 @@ content.
 
 | Class                                             | Property                    | px / rem | Spacing token |
 | ------------------------------------------------- | --------------------------- | -------- | ------------- |
-| `.bx--search--lg`                                 | height                      | 48 / 3   | –             |
-| `.bx--search--sm`                                 | height                      | 32 / 2   | –             |
 | `.bx--search-magnifier` <br/> `.bx--search-close` | height, width               | 16 / 1   | –             |
 | `.bx--search--lg`                                 | padding-left, padding-right | 48 / 3   | `$spacing-09` |
 | `.bx--search--sm`                                 | padding-left, padding-right | 32 / 2   | `$spacing-07` |
+
+### Sizes
+
+The width of the search field should appropriately fit the design and layout of
+content.
+
+|Element     | Size                                | Height (px / rem)                   | 
+| -----------| ------------------------------------ | ----------------------------------- | 
+|Input       | Small (sm)                           | 32 / 2                              |    
+|            | Medium (md)                          | 40 / 2.5                            |
+|            | Large (lg)                           | 48 / 3                              |
+
 
 <div className="image--fixed">
 
