(fix) search v11 style tab

--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -66,21 +66,9 @@ content.
 | `.bx--search--lg`                                 | padding-left, padding-right | 48 / 3   | `$spacing-09` |
 | `.bx--search--sm`                                 | padding-left, padding-right | 32 / 2   | `$spacing-07` |
 
-### Sizes
-
-The width of the search field should appropriately fit the design and layout of
-content.
-
-|Element     | Size                                | Height (px / rem)                   | 
-| -----------| ------------------------------------ | ----------------------------------- | 
-|Input       | Small (sm)                           | 32 / 2                              |    
-|            | Medium (md)                          | 40 / 2.5                            |
-|            | Large (lg)                           | 48 / 3                              |
-
-
 <div className="image--fixed">
 
-![Structure and spacing measurements for regular search](images/search-style-2.png)
+![Structure and spacing measurements for large search](images/search-style-2.png)
 
 </div>
 
