add carbon charts slack channel link

--- a/src/pages/developing/get-started.mdx
+++ b/src/pages/developing/get-started.mdx
@@ -97,6 +97,7 @@ question to you and will jump in to help you out.
 
 - [#carbon-design-system](https://ibm-studios.slack.com/messages/C0M053VPT/)
 - [#carbon-components](https://ibm-studios.slack.com/archives/C046Y0YUD)
+- [#carbon-charts](https://peretz.slack.com/archives/CCA7L4MS9)
 - [#carbon-react](https://ibm-studios.slack.com/archives/C2K6RFJ1G)
 - [#carbon-ng](https://ibm-studios.slack.com/archives/CBZC0LM2N)
 - [#carbon-vue](https://ibm-studios.slack.com/archives/CAM5P6NR1)
