adding images to experiences tab

--- a/src/pages/guidelines/typography/experiences.mdx
+++ b/src/pages/guidelines/typography/experiences.mdx
@@ -109,46 +109,56 @@ Here are some of the places the Dotcom team use productive moments:
 - IBM.com search
 - Commerce
 - Product configuration
-- Search/filter on catalogs
+- Account creation
+- Filter panel in catalogs
 
-Images
+<Row>
+<Column colLg={12}>
 
-\*\* add mega menu image
+![Example of productive type styles in website mega menu](images/productive-in-expressive-megamenu.png)
+
+</Column>
+</Row>
 
 <Caption>
-  The more compact productive type styles make it easier to scan the IBM website
-  mega menu.
+  The mega menu with the more compact productive type styles allows users to see
+  the full range of offerings.
 </Caption>
 
-\*\* add productive tab image
+<Row>
+<Column colLg={12}>
+
+![Example of productive tab component on website](images/productive-in-expressive-tabs.png)
+
+</Column>
+</Row>
+
+<Caption>Productive tabs keep content contained and easy to scan.</Caption>
+
+<Row>
+<Column colLg={12}>
+
+![Example of productive moment with account creation form](images/productive-in-expressive-URX.png)
+
+</Column>
+</Row>
 
 <Caption>
-  The productive tab component keeps content contained and easy to scan.
+  Example of a productive moment on an account creation form assists with focus
+  and interactions.
 </Caption>
 
-<Caption>
-  Creating a chatbot is easy when you have a starting place with pre-built
-  content.
-</Caption>
+<Row>
+<Column colLg={12}>
 
-\*\* add product configuration image
+![Example of filter panel component on website](images/productive-in-expressive-filter.png)
 
-<Caption>
-  A productive moment on an input form during product configuration facilitates
-  focus.
-</Caption>
-
-\*\* add checkout image
+</Column>
+</Row>
 
 <Caption>
-  A productive moment on an input form during checkout facilitates focus.
-</Caption>
-
-\*\* add filter panel image
-
-<Caption>
-  A productive moment in the filter panel keeps information contained and easy
-  to scan.
+  A productive moment in the filter panel keeps information contained and easier
+  to make selections.
 </Caption>
 
 ### Using expressive moments within product designs
