docs: add feducation video to v11 page

--- a/src/pages/whats-happening/v11-release/index.mdx
+++ b/src/pages/whats-happening/v11-release/index.mdx
@@ -1,13 +1,13 @@
 ---
 title: The v11 release
 description:
-  The Carbon v11 release includes great quality of life updates for designers
-  and developers, and with no brand updates, no product redesigns are required.
+  The Carbon v11 release includes quality of life updates for designers and
+  developers, and with no brand updates, no product redesigns are required.
 ---
 
 <PageDescription>
 
-The Carbon v11 release includes great quality of life updates for designers and
+The Carbon v11 release includes quality of life updates for designers and
 developers, and with no brand updates, no product redesigns are required.
 
 </PageDescription>
@@ -23,6 +23,7 @@ lookout for the public preview release available in the coming months.
 
 <AnchorLink>Overview</AnchorLink>
 <AnchorLink>Read more in Medium</AnchorLink>
+<AnchorLink>June 15th FEDucation</AnchorLink>
 <AnchorLink>Release FAQs</AnchorLink>
 
 </AnchorLinks>
@@ -82,6 +83,14 @@ brand-driven product redesigns.
 </ArticleCard>
 </Column>
 </Row>
+
+## June 15th FEDucation
+
+As part of IBM's front-end developer educational series, Josh Black introduces
+the upcoming v11 release, its features, and how to get involved and provide
+feedback.
+
+<Video title="Carbon v11 video" vimeoId="567122059" />
 
 ## Release FAQs
 
