--- a/src/pages/guidelines/typography/experiences.mdx
+++ b/src/pages/guidelines/typography/experiences.mdx
@@ -172,11 +172,17 @@ For expressive moments, you are looking for areas where the page opens up and
 the content is not restricted to a container, card, or data table. Home pages
 and page headers or banners are two possibilites.
 
-\*\* add image
+<Row>
+<Column colLg={12}>
+
+![Example of expressive moment on product home page](images/expressive-in-productive-homepage.png)
+
+</Column>
+</Row>
 
 <Caption>
   A home page when the user is first entering the product or an area of the
-  product.
+  product provides an opportunity for an expressive moment.
 </Caption>
 
 For more details about home pages, IBMers can reference the
