--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -134,6 +134,11 @@ increases the internal and external eminence of Carbon Design System and IBM.
 ![Linda Carotenuto headshot](/images/team/carotenuto_linda.png)
 
 </Profile>
+<Profile name="Jeff Chew" title="Senior Experience Technology Manager, IBM Cloud and Cognitive Software">
+
+![Jeff Chew headshot](/images/team/chew_jeff.png)
+
+</Profile>
 <Profile name="David Levinson" title="IBM Design Principal, IBM Cloud and Cognitive Software">
 
 ![David Levinson headshot](/images/team/levinson_david.png)
@@ -159,6 +164,11 @@ increases the internal and external eminence of Carbon Design System and IBM.
 ![Jeannie Servaas headshot](/images/team/servaas_jean.png)
 
 </Profile>
+<Profile name="Jeff Sloyer" title="Senior Technical Staff Member, IBM Cloud">
+
+![Jeff Sloyer headshot](/images/team/sloyer_jeff.png)
+
+</Profile>
 <Profile name="JD Speer" title="Design Lead, IBM Storage">
 
 ![JD Speer headshot](/images/team/speer_jd.png)
@@ -172,6 +182,11 @@ increases the internal and external eminence of Carbon Design System and IBM.
 <Profile name="Diana Tran" title="Visual Design Practice Lead, IBM Sterling">
 
 ![Diana Tran headshot](/images/team/tran_diana.png)
+
+</Profile>
+<Profile name="Garrett Vorbeck" title="Front-end Developer, IBM Systems">
+
+![Garrett Vorbeck headshot](/images/team/vorbeck_garrett.png)
 
 </Profile>
 </Row>
