fix: image updates

--- a/src/pages/patterns/status-indicator-pattern/index.mdx
+++ b/src/pages/patterns/status-indicator-pattern/index.mdx
@@ -313,12 +313,12 @@ is good practice to clarify the status intention in the text label.
 <DoDontRow>
   <DoDont caption="Do left align icons and type in lists and data tables, regardless of whether you’re using the responsive grid or spacers." colLg={6}>
 
-![Aligned status indicator icons.](images/status_indicator_5.jpg)
+![Aligned status indicator icons.](images/status_indicator_5.png)
 
   </DoDont>
   <DoDont type="dont" colLg={6} caption="Do not push icons out of alignment with label length. In this case, where the status indicators are flush right, the two digit labels are pushing the icons out of alignment.">
 
-![Misaligned status indicator icons](images/status_indicator_6.jpg)
+![Misaligned status indicator icons](images/status_indicator_6.png)
 
   </DoDont>
 </DoDontRow>
