--- a/src/pages/guidelines/typography/type-usage.mdx
+++ b/src/pages/guidelines/typography/type-usage.mdx
@@ -6,7 +6,7 @@ title: Typography
 description:
   Carbon provides designers with two type sets that support productive and
   expressive experiences.
-tabs: ['Overview', 'Experiences', 'Type sets', 'Code']
+tabs: ['Overview', 'Type usage', 'Type sets', 'Code']
 ---
 
 <PageDescription>
@@ -14,24 +14,24 @@ tabs: ['Overview', 'Experiences', 'Type sets', 'Code']
 Carbon provides two type sets that support both productive and expressive
 experiences. Primarily, productive was designed for product and expressive was
 designed for web pages, but there are opportunities to blend contrasting moments
-to elevate the overall experience.
+to provide clarity through hierarchy, and elevate the overall experience.
 
 </PageDescription>
 
 <InlineNotification>
 
 The Expressive theme has been integrated into the Carbon Design System's core
-library, and both the productive and expressive type sets are now available
-within the one [Sketch kit](/designing/design-kits/).
+library, and all type styles for expressive and productive use cases are
+available within the one [Sketch kit](/designing/design-kits/).
 
 </InlineNotification>
 
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
-<AnchorLink>The productive experience</AnchorLink>
-<AnchorLink>The expressive experience</AnchorLink>
-<AnchorLink>Blending experiences</AnchorLink>
+<AnchorLink>Productive use cases</AnchorLink>
+<AnchorLink>Expressive use cases</AnchorLink>
+<AnchorLink>Blending type sets</AnchorLink>
 <AnchorLink>Guidelines</AnchorLink>
 <AnchorLink>Getting help</AnchorLink>
 
@@ -46,19 +46,20 @@ IBM.com website pages.
 
 The overarching rule has been to use the productive type styles for product
 design and the expressive for web pages. For the most part, this is still a good
-guideline to follow. However, over time we've recognized some situations where
-we can create contrasting moments that better support the user with their
-specific tasks.
+guideline to follow. However, there are situations where we can create
+contrasting moments that better support the user's intention or task.
 
 Let's look at the respective design rationales for each experience, and then see
 where it makes sense to provide a blend.
 
-## The productive experience
+## Productive use cases
 
 Carbon Design System started as the design system for Cloud console and provides
-typography that supports **productive experiences**.
+typography that supports productive use cases.
 
-The key drivers defining a productive experience are as follows:
+#### When to use productive type styles
+
+The key drivers for the use of productive type styles are:
 
 - Users are focused on getting a specific job done.
 - Interactions are more active, through inputs, forms, and controls.
@@ -66,15 +67,27 @@ The key drivers defining a productive experience are as follows:
 - Key performance indicators consider success in terms of time needed to
   complete a task and also the abandonment rate.
 
-Given these considerations, a high information density is preferred. Keeping
-content condensed is helpful to support focus on complex tasks.
+Given these considerations, space efficiency is key. Keeping content condensed
+is helpful to support focus on complex tasks.
 
-## The expressive experience
+#### Styles for productive moments
+
+To create productive moments, use the body styles and supporting styles with the
+`01` suffix, as well as the fixed headings.
+
+To ensure consistent line heights, use the following pairings:
+
+- pair `body-short-01` with the `heading-short-01`
+- pair `body-long-01` with the `heading-long-01`
+
+## Expressive use cases
 
 Carbon for IBM.com is for the creators of IBM.com and it provides typography
-that supports **expressive experiences.**
+that supports expressive use cases.
 
-The key drivers defining an expressive experience are as follows:
+#### When to use expressive type styles
+
+The key drivers for the use of expressive type styles are:
 
 - Users are trying to learn and explore, and are primarily scanning and reading.
 - Interactions are more passive through impactful imagery, layout, and long form
@@ -86,11 +99,30 @@ The key drivers defining an expressive experience are as follows:
 Given these considerations, larger type sizes and a more editorial approach
 allows users to scan, read, and navigate multiple pages with comfort and ease.
 
-## Blending experiences
+#### Styles for expressive moments
+
+To create expressive moments, use the body styles and supporting styles with the
+`02` suffix. There are also two fixed headings, as well as fluid headings that
+will adjust with different breakpoints.
+
+For the fixed headings, ensure consistent line heights by using the following
+pairings:
+
+- pair `body-short-02` with the `heading-short-02`
+- pair `body-long-02` with the `heading-long-02`
+
+As well as these two fixed headings, there is a set of fluid headings that add a
+series of scales and fluid behavior.
+
+## Blending type sets
 
 The spaces we are designing for are no longer neatly divided between productive
-and expressive. Experiences can be blended with what we call "moments" if the
-alternative experience better supports the user purpose.
+and expressive. Both product and web pages can be blended with what we call
+"moments" if the alternative type set better supports the function.
+
+Users working in product pages benefit from an expressive moment for easy
+reading or a pause. In these cases, however the "moment" would span a full page
+or banner where there are no containers.
 
 If your users are working in a product but pausing to read or scan for options,
 an expressive moment can facilitate easy reading and/or create a desired impact
@@ -128,12 +160,11 @@ Here are some of the places the Dotcom team use productive moments:
 <Row>
 <Column colLg={12}>
 
-![Example of productive tab component on website](images/productive-in-expressive-tabs.png)
+![Example of productive tabs on a web page](images/productive-in-expressive-tabs2.png)
 
 </Column>
 </Row>
-
-<Caption>Productive tabs keep content contained and easy to scan.</Caption>
+<Caption>Using productive type styles on tabs provides a distinction in scale. It creates a hierarchy that keeps focus on the results.</Caption>
 
 <Row>
 <Column colLg={12}>
@@ -144,8 +175,9 @@ Here are some of the places the Dotcom team use productive moments:
 </Row>
 
 <Caption>
-  Example of a productive moment on an account creation form assists with focus
-  and interactions.
+  Account creation form with expressive type on the left, and productive type
+  for the form interactions on the right. It shows how both type styles can work
+  side by side.
 </Caption>
 
 <Row>
@@ -157,8 +189,8 @@ Here are some of the places the Dotcom team use productive moments:
 </Row>
 
 <Caption>
-  A productive moment in the filter panel keeps information contained and easier
-  to make selections.
+  Juxtaposing productive type within an expressive page is a useful tactic for
+  creating a setback or a hierarchy.
 </Caption>
 
 ### Using expressive moments within product designs
@@ -181,45 +213,42 @@ and page headers or banners are two possibilites.
 </Row>
 
 <Caption>
-  A home page when the user is first entering the product or an area of the
-  product provides an opportunity for an expressive moment.
+  A product home page provides an opportunity to create both visual interest,
+  and distinction and hierarchy with a blend of expressive and productive type
+  styles.
 </Caption>
 
 For more details about home pages, IBMers can reference the
 [World overview page pattern](https://pages.github.ibm.com/ibmcloud/pal/patterns/world-overview-pages/usage/)
 in the IBM Cloud library.
 
-## Guidelines
+## Tips and techniques
 
-Here are some guidelines for creating productive and expressive moments.
+#### Use a blend of the two sets to establish distinctions and create hierarchies
+
+You can use the two type sets to provide contrast and hierarchy within two
+areas. For example, the filter panel using productive type becomes less
+prominent next to a list of results using expressive type styles. You can push
+the functional elements into the background, while keeping the items of user
+interest in the foreground.
+
+#### Match and support user tasks
+
+Within each type set, there are appropriately sized type styles for each user
+task. Follow the use case definitions for expressive and productive moments to
+determine when it's appropriate to use each type set.
+
+_When users need to focus on a task_ and are interacting through inputs, forms,
+and controls, use the productive type set.
+
+_When users are learning and exploring,_ and interacting through impactful
+imagery, layout, and long form reading, pull from the expressive type set.
 
 #### Keep type styles consistent within a discrete task, component, or region
 
 People unconsciously use type size as a signal of hierarchy, and each type set
 has been designed with expectations about hierarchy in mind. Mixing type styles
 within a component could jumble the hierarchy and create confusion.
-
-#### Use productive for product and expressive for web pages
-
-As a rule of thumb, stay in your lane and align with the primary space in which
-the user is working. The productive type set should be used for product and the
-expressive type set for web pages. The use of a blend is for key moments. It
-works well for expressive experiences to have productive moments, but is a
-little less common the other way around.
-
-#### Match and support the user task
-
-Within each type set, there are appropriately sized type styles for each user
-task.
-
-_When users need to focus on a task_ and are interacting through inputs, forms,
-and controls, use the productive type set. The more dramatic, graphic use of
-type in editorial design would be distracting.
-
-_When users are learning and exploring,_ and interacting through impactful
-imagery, layout, and long form reading, use the expressive type set. The high
-type density found in products would be overwhelming, and information difficult
-to absorb.
 
 ## Questions?
 
