--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -6,7 +6,7 @@ title: Typography
 description:
   The productive and expressive type sets support designers creating for a full
   range of user needs and activities across product and web pages.
-tabs: ['Overview', 'Experiences', 'Type sets', 'Code']
+tabs: ['Overview', 'Type usage', 'Type sets', 'Code']
 ---
 
 <PageDescription>
@@ -19,8 +19,8 @@ range of user needs and activities across product and web pages.
 <InlineNotification>
 
 The Expressive theme has been integrated into the Carbon Design System's core
-library, and both the productive and expressive type sets are now available
-within the one [Sketch kit](/designing/design-kits/).
+library, and all type styles for expressive and productive use cases are
+available within the one [Sketch kit](/designing/design-kits/).
 
 </InlineNotification>
 
