--- a/src/pages/components/accordion/usage.mdx
+++ b/src/pages/components/accordion/usage.mdx
@@ -28,7 +28,7 @@ associated sections of content.
 
 ## Overview
 
-The accordion component delivers large amounts of content in a small space
+An accordion component delivers large amounts of content in a small space
 through progressive disclosure. The header title give the user a high level
 overview of the content allowing the user to decide which sections to read.
 
