--- a/src/pages/components/accordion/usage.mdx
+++ b/src/pages/components/accordion/usage.mdx
@@ -8,7 +8,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <PageDescription>
 
-The accordion is a vertically stacked list of headers that reveal or hide
+An accordion is a vertically stacked list of headers that reveal or hide
 associated sections of content.
 
 </PageDescription>
@@ -28,7 +28,7 @@ associated sections of content.
 
 ## Overview
 
-An accordion component delivers large amounts of content in a small space
+The accordion component delivers large amounts of content in a small space
 through progressive disclosure. The header title give the user a high level
 overview of the content allowing the user to decide which sections to read.
 
