--- a/src/pages/components/modal/accessibility.mdx
+++ b/src/pages/components/modal/accessibility.mdx
@@ -62,7 +62,7 @@ content to this component.
    a visible element with button role that closes the dialog, such as a close
    icon or cancel button.
 5. Use the Alert modal dialog for special case that interrupts user’s workflow
-   to communicate a brief, important message and require a user’s response,
+   to communicate a brief, important message and require a user’s response.
 
 ## Resources
 
