rework based on more discussions

--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -1,7 +1,7 @@
 ---
 label:
-  The productive and expressive type sets support designers creating for a full
-  range of user needs and activities across product and web pages.
+  Carbon uses type tokens to manage our typography, and these tokens sit within
+  two type sets.
 title: Typography
 description:
   The productive and expressive type sets support designers creating for a full
@@ -11,8 +11,8 @@ tabs: ['Overview', 'Type usage', 'Type sets', 'Code']
 
 <PageDescription>
 
-The productive and expressive type sets support designers creating for a full
-range of user needs and activities across product and web pages.
+Carbon uses type tokens to manage our typography, and these tokens sit within
+two type sets: expressive and productive.
 
 </PageDescription>
 
@@ -27,43 +27,88 @@ available within the one [Sketch kit](/designing/design-kits/).
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
-<AnchorLink>The type sets</AnchorLink>
+<AnchorLink>Supporting styles</AnchorLink>
+<AnchorLink>Body styles</AnchorLink>
+<AnchorLink>Fixed heading styles</AnchorLink>
+<AnchorLink>Fluid heading styles</AnchorLink>
+<AnchorLink>Display styles</AnchorLink>
+<AnchorLink>Quote styles</AnchorLink>
 <AnchorLink>Questions</AnchorLink>
 
 </AnchorLinks>
 
 ## Overview
 
-The two IBM type sets support designers creating productive and expressive
-experiences within IBM products and IBM.com website pages.
+Carbon uses type tokens to manage our typography, and these tokens sit within
+two type sets. The productive and expressive type sets support designers
+creating for a full range of user needs and activities across product and web
+pages.
 
 #### Base type sizes
 
-Productive experiences use a base type size of 14px, while expressive
-experiences use a base type size of 16px.
+The productive type set uses a base type size of 14px, while the expressive type
+set uses a base type size of 16px.
 
 #### Style naming conventions
 
 Within **Body styles** and **Supporting styles**, the same set of styles are
-offered. Productive styles are named with a suffix of `-01` and expressive style
+offered, and an easy way to spot which type set they belong to is to look at the
+suffix. Productive styles are named with a suffix of `-01` and expressive style
 names have a suffix of `-02`.
 
 #### Two heading sets
 
-There are two heading type sets and the major difference between them is in how
-they are implemented in code.
+There are two heading sets, one for productive and one for expressive. The major
+difference between them is in how they are implemented in code because of the
+nature of the pages.
 
-- Expressive headings are responsive and the type styles change size at
-  different breakpoints. These values are carefully designed to maintain
-  hierarchical relationship when used among other expressive headings.
+- The productive type set uses _fixed_ headings. Product pages have a higher
+  density of information housed inside containers for space efficiency, and in
+  these situations fixed type styles are a must.
 
-- Productive uses fixed headings. In the product space, users are generally
-  embedded within one area that has multiple containers and denser content, and
-  therefore headings in the productive type set are fixed.
+- The expressive type set has two fixed headings, for use where smaller headings
+  are needed. The remainding headings are _fluid_. Web pages need to be able to
+  flex and work at different breakpoints, and the fluid heading styles change
+  size at different breakpoints, and can extrapolate/stretch in between sizes
+  for smooth transitions.
 
-## The type sets
+## Supporting styles
 
---> insert new table component here
+There are two supporting styles for use with productive and expressive moments.
+Productive styles have a suffix of `-01` and expressive styles have a suffix of
+`-02`.
+
+## Body styles
+
+There are two body styles for productive and expressive moments. Productive
+styles have a suffix of `-01` and expressive styles have a suffix of `-02`.
+
+## Fixed heading styles
+
+The fixed heading styles are used for product pages where multiple containers
+are used and space efficiency is key. Fixed means they are not responsive. The
+type size remains constant regardless of break point.
+
+Creators of web pages also use the fixed headings `-01` and `-02` where smaller
+headings are needed.
+
+## Fluid heading styles
+
+The fluid heading styles are primarily used in web pages, and are therefore part
+of the expressive set of type styles. These headings are responsive and the type
+styles change size at different breakpoints. They may be used in product pages
+where text sits outside of a container, and a blend of expressive and productive
+type styles is desired for hierarchy and distinction.
+
+## Fluid display styles
+
+These display styles are part of the expressive set and being fluid, they will
+adjust at different breakpoints.
+
+## Fluid quote styles
+
+These quote styles are part of the expressive set and being fluid, they will
+adjust at different breakpoints.
 
 ## Questions?
 
