--- a/src/pages/guidelines/typography/type-usage.mdx
+++ b/src/pages/guidelines/typography/type-usage.mdx
@@ -80,6 +80,8 @@ To ensure consistent line heights, use the following pairings:
 - pair `body-short-01` with the `heading-short-01`
 - pair `body-long-01` with the `heading-long-01`
 
+Productive headings are fixed.
+
 ## Expressive use cases
 
 Carbon for IBM.com is for the creators of IBM.com and it provides typography
@@ -214,7 +216,7 @@ and page headers or banners are two possibilites.
 
 <Caption>
   A product home page provides an opportunity to create both visual interest,
-  and distinction and hierarchy with a blend of expressive and productive type
+  distinction, and hierarchy with a blend of expressive and productive type
   styles.
 </Caption>
 
