--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -31,8 +31,8 @@ available within the one [Sketch kit](/designing/design-kits/).
 <AnchorLink>Body styles</AnchorLink>
 <AnchorLink>Fixed heading styles</AnchorLink>
 <AnchorLink>Fluid heading styles</AnchorLink>
-<AnchorLink>Display styles</AnchorLink>
-<AnchorLink>Quote styles</AnchorLink>
+<AnchorLink>Fluid display styles</AnchorLink>
+<AnchorLink>Fluid quote styles</AnchorLink>
 <AnchorLink>Questions</AnchorLink>
 
 </AnchorLinks>
