docs(v11): color implementation tab

--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -3,7 +3,7 @@ title: Color
 description:
   Maintaining consistent and engaging digital interfaces throughout IBM, whether
   applications or experiences, demands extended guidance around color usage.
-tabs: ['Overview', 'Usage', 'Code']
+tabs: ['Overview', 'Usage', 'Code', 'Implementation']
 ---
 
 import ColorBlock from 'components/ColorBlock';
