8 column images in tabs

--- a/src/pages/guidelines/color/implementation.mdx
+++ b/src/pages/guidelines/color/implementation.mdx
@@ -44,8 +44,7 @@ to use when building your product.
 </Row>
 
 <Caption>
-  {' '}
-  A visual spec using layer set tokens (left) versus contextual tokens (right).{' '}
+  A visual spec using layer set tokens (left) versus contextual tokens (right).
 </Caption>
 
 ### Token list
@@ -90,29 +89,61 @@ and `icon` work across layer sets.  _Note: previously in v10 many color tokens
 had numeral suffixes, now in v11 only layering tokens will have this
 distinction._
 
+<Row>
+<Column colLg={8}>
+
+![Component spec example using layering tokens](images/color-implementation-layer-set-3.png)
+
+</Column>
+</Row>
+
 <Tabs>
 
 <Tab label="White">
 
+<Row>
+<Column colLg={8}>
+
 ![Layer set tokens applied to dropdown in the White theme](images/color-implementation-layer-set-W.png)
+
+</Column>
+</Row>
 
 </Tab>
 
 <Tab label="Gray 10">
 
+<Row>
+<Column colLg={8}>
+
 ![Layer set tokens applied to dropdown in the Gray 10 theme](images/color-implementation-layer-set-G10.png)
+
+</Column>
+</Row>
 
 </Tab>
 
 <Tab label="Gray 90">
 
+<Row>
+<Column colLg={8}>
+
 ![Layer set tokens applied to dropdown in the Gray 90 theme](images/color-implementation-layer-set-G90.png)
+
+</Column>
+</Row>
 
 </Tab>
 
 <Tab label="Gray 100">
 
+<Row>
+<Column colLg={8}>
+
 ![Layer set tokens applied to dropdown in the Gray 100 theme](images/color-implementation-layer-set-G100.png)
+
+</Column>
+</Row>
 
 </Tab>
 
@@ -192,9 +223,23 @@ as they are high enough contrast not to need to change with each layer.
 </Row>
 
 <Caption>
-  {' '}
-  Example component spec in the white theme using the layer set 01 tokens.{' '}
+  Example component spec in the white theme using the layer set 01 tokens.
 </Caption>
+
+## Contextual layer tokens
+
+Contextual tokens are smart tokens used to automatically map the layering model
+onto components in code. A contextual token is aware of what layer it is placed
+on and will call the correct layer set token needed for that layer level. There
+is only one set of contextual tokens and it requires only one variant of a
+component to be built. Contextual tokens are a part of the component package
+instead of the theme package and are used in the v11 Carbon components. To
+implement the nesting layers correctly in code use the layer component with the
+contextual tokens.
+
+Contextual tokens have all the same type of tokens as the layer set except
+without the number prefixes. It doesn't matter what layer it sits on, the
+contextual token is always the same across layer levels.
 
 ## Light or dark mode
 
